# compose-scaler

./: .traefik.yml  Dockerfile  README.md
app/: Cargo.toml
app/src/: config.rs  main.rs  sessions.rs
plugins/traefik/: config.go  go.mod  main.go
themes/: ghost.html
