[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
bollard = "0.15.0"
clap = { version = "4.4.18", features = ["derive"] }
hashbrown = "0.14.3"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
ssh2 = "0.9.4"
tera = { version = "1.19.1", default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "process", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0.111"
