[package]
name = "app"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2"] }
bollard = "0.18"
clap = { version = "4.4", features = ["derive"] }
hashbrown = "0.15"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ssh2 = "0.9"
tera = { version = "1.19", default-features = false }
thiserror = "2.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
